--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "bootstrap": "^4.4.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
